10326 SPARC boot fails with vmem_xalloc(): size overflow Contributed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Andy Fiddaman <af@citrus-it.net> Approved by: Dan McDonald <danmcd@joyent.com>